# robotframework-ConfluentKafkaLibrary

./: .gitignore  .travis.yml  LICENSE  README.md  index.html  log.html  output.xml  pyproject.toml  report.html  requirements.txt  setup.py
.github/workflows/: generate_docs.yml  main.yml  python-publish.yml
doc/: documentation.html
docs/: index.html
examples/: docker-compose.yml  oauth2_test.py  oauth_example.py  test.robot  test_adminclient.robot  test_avro.robot  test_oauth.robot  test_protobuf.robot
examples/schema/avro/: ValueSchema.avsc
examples/schema/producer/: KeySchema.avsc
examples/schema/protobuf/: user.proto  user_helper.py  user_pb2.py
src/ConfluentKafkaLibrary/: __init__.py  admin_client.py  consumer.py  producer.py  serialization.py  version.py
